[project]
name = "agentaihelpdesk"
version = "0.1.0"
description = "AgentAIHelpDesk using crewAI"
authors = [
    { name = "Manoj Kumar Pangi", email = "manojkumar.p@prodapt.com" },
]

requires-python = "^3.12"
dependencies = [
    "crewai>=0.11.0",
    "unstructured==0.10.25",
    "pyowm3.3.0",
    "tools>=0.1.9",
    "python-dotenv1.0.0",
]

[project.scripts]

[build-system]
requires = [
    "hatchling",
]
build-backend = "hatchling.build"
